- [bugfix] Fix nullPlaceholder behavior on IE. Bug would cause the text "null" to appear in WFSearchField instead of "" on focus.
- [bugfix] Fix WFGenerator bug with proper creation of peer column name in search code of createSkeletonFromPropel.

Version 0.2.5 - 6/29/2009
- [BC-break] Updated the behavior of WFRequestController::WFURL to be consisent with other fuctions; now never ends in a trailing '/'.
             The BC-break is that it used to end in a trailing slash if the $page param was null; thus any use of WFURL (smarty plugin too) that doesn't pass in a $page value
             will need to be updated to add the '/' in the client code.
- [new] Add WFWebApplicationDelegate::authorizationInfoClass() callback to allow use of custom WFAuthorizationInfo subclass throughout the application.
- [new] Added WFPageDelegate::willNotRunAction($page, $params) callback to allow controller to be notified of the situation where the action method won't be run because validation failed when propagating bindings. Without this callback it was impossible to detect this situation.
- [new] phocoa commits now broadcast on twitter at @phocoa
- [new] The baseDir property of WFImage now supports WFBindingSetup::WFBINDINGTYPE_MULTIPLE_PATTERN.
- [new] WFYAHOO_widget_Container subclasses now all automatically eval scripts in the body. This allows for seamless use of <script> blocks in YUI modules.
- [new] Uncaught Exception handler now also grabs PHP Fatal Catchable errors and routes them into the exception workflow for even more error-handling goodness.
- [bugfix] Fix nullPlaceholder behavior on IE. Bug would cause the text "null" to appear in WFTextField and WFTextArea instead of "" on focus.
- [bugfix] Fix bug with preventAbandondedForm that caused an error due to a race condition with getting initial form state.
- [bugfix] Fix bug with preventAbandondedForm that prevented the buttons from being visible on IE browsers.